adding contact-details

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.2",
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "web-api": "^0.2.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
