--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ TESTS-*.xml
 **/debug.log
 **/npm-debug.log
 **/lerna-debug.log
+package.json
+package.json
+package-lock.json
+node_modules/font-awesome/package.json
