--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aurelia-bootstrapper": "^2.3.2",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "nprogress": "^0.2.0",
     "web-api": "^0.2.0"
   },
   "devDependencies": {
